	- Integration of 4 Tcl packages (http/tar/csv/json) in the AnnotSV distribution
	- Add bugfix concerning the running of bash scripts (illegal use of | or |& in command)
	- Add bugfix concerning the use of the "-snvIndelFiles" and "-candidateSnvIndelSamples" options
	- Add bugfix for the exomiser use
	- Add bugfix concerning the AnnotSV installation when PREFIX is not the current directory

Dec 20, 2019: AnnotSV version 2.3
	- Include phenotype-driven annotations (HPO), based on Exomiser (Smedley et al., 2015)
	- Include the lift-over GRCh38 gnomAD SV frequency annotation
	- Include the "-annotationsDir" option to pass the annotations directory to AnnotSV at run time
	- New "AnnotSV ID" settings (to ensure unique SV identifiers)
	- Deletion filtering improvement
	- Integration of the gnomAD frequency data in the ranking
	- AnnotSV can now create two other output files:
		- A report of unannotated variants (e.g. badly formatted SV, variant length < SVminSize...)
		- A report of the decisions that explain the ranking of each SV
	- Change the names of the misleading following options: 
		vcfFiles           >>  snvIndelFiles
		vcfPASS            >>  snvIndelPASS
		vcfSamples         >>  snvIndelSamples) 
		filteredVCFfiles   >>  candidateSnvIndelFiles
		filteredVCFsamples >>  candidateSnvIndelSamples
	- Annotations are not distributed anymore with the sources but downloaded during the installation with the Makefile
	- AnnotSV executable is now directly located in $ANNOTSV/bin to respect the FHS
	- Add bugfix concerning the management of BED files
	- Add bugfix for the report of the compound heterozygosity (1 SV + 1 SNV/indel)
	- Add bugfix concerning the -candidateGenesFiltering option
	- Add bugfix concerning the DGV metrics
	- Add bugfix concerning the use of the "-sort" Linux command (whose behavior is OS dependant)
	- Add bugfix concerning the use of "external gene annotation files"
	- Add bugfix concerning the -txFile option

July 09, 2019: AnnotSV version 2.2